# lidar

./: .gitignore  CMakeLists.txt  CMakePresets.json  TODO.md  build_log.txt  changelogs.md  config.yaml  config_0205.yaml  config_0304.yaml  config_0309_cached_plane.yaml  learn.md  logs.md  test_config.cpp
build_test/: CMakeLists.txt
include/: app_pipeline.h  ore_analysis.h  utils.h
pcd_data/20260205/xray_0p5ms-1/: foo172.tif  foo173.tif  foo174.tif  foo175.tif  foo176.tif
py_src/: ScreenCamera_2026-01-21-11-15-31.json  ScreenCamera_2026-02-02-21-48-30.json  auto_xrt_calibrate.py  compare_volumes.py  crop_ply_x.py  get_res_ply.py  show_ply.py  simple_stack.py  stack_png.py  test.ipynb  utils.py  verify_interpolation.py
results_0309_0p002_by_lidar/: banyan_Detong_1_63_347.csv
results_0309_0p002_by_mask/: banyan_Detong_1_63_347.csv
results_0309_0p005_by_lidar/: banyan_Detong_1_63_347.xls
src/: app_pipeline.cpp  code_explanation.md  main.cpp  ore_analysis.cpp  pcl_visualizer_demo.cpp  utils.cpp
